Redis interface for Plugins